--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
-    "manifest_version": 2,
-    "name": "PriceTracker",
-    "version": "0.1",
-    "description": "Automatic price checking",
-    "permissions": ["storage", "fileSystem", "tabs", "activeTab"],
-    "host_permissions": [
-      "127.0.0.1:8989/*",
-      "https://*/*",
-      "http://*/*"
-    ],
-    "browser_action": {
-      "default_popup": "index.html"
-    },
-    "content_scripts": [
-      {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-      }
-    ]
+  "manifest_version": 2,
+  "name": "PriceTracker",
+  "version": "0.1",
+  "description": "Automatic price checking",
+  "permissions": ["storage", "fileSystem", "tabs", "activeTab", "webRequest", "webRequestBlocking", "https://127.0.0.1:8989/auth/token"],
+  "host_permissions": [
+    "127.0.0.1:8989/*",
+    "https://*/*",
+    "http://*/*"
+  ],
+  "browser_action": {
+    "default_popup": "index.html"
+  },
+  "content_scripts": [
+    {
+    "matches": ["<all_urls>"],
+    "js": ["content.js"]
+    }
+  ]
 }
